# garmin-data

./: .env.example  .gitignore  Personal Health AI Agent README.md  health_profile.yaml  pyproject.toml
.github/workflows/: daily-pipeline.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-data-ingestion-and-storage/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-health-profile-and-prompt-assembly/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-analysis-engine/: 03-01-PLAN.md  (+7 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  GARMIN_DATA_ACCESS.md  GARMIN_DATA_TOOLS.md  GARMIN_RESEARCH_SYNTHESIS.md  INTEGRATION_PATHS.md  PITFALLS.md  STACK.md  SUMMARY.md
onboarding/: .env.local.example  package-lock.json  package.json
sql/: 05-pipeline-automation.sql
src/biointelligence/: __init__.py  __main__.py  config.py  logging.py  main.py  pipeline.py
supabase/: onboarding-ddl.sql
tests/: test_analysis.py  test_analysis_storage.py  test_anomaly.py  test_automation.py  test_client.py  test_extractors.py  test_lab_extractor.py  test_models.py  test_onboarding_mapper.py  test_pipeline.py  test_profile.py  test_prompt.py  test_renderer.py  test_sender.py  test_storage.py  test_trends.py  test_whatsapp_renderer.py  test_whatsapp_sender.py
tests/fixtures/: garmin_responses.json  health_profile.yaml
(+116 files in other folders)
